apps/base/homepage/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    app: homepage
  ports:
    - name: http-homepage
      protocol: TCP
      port: 3000
      targetPort: http-homepage
