apps/base/homepage/route.yaml

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: homepage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik

  hostnames:
    - homepage.localho.st

  rules:
     - matches:
        - path:
            type: PathPrefix
            value: /

       backendRefs:
        - name: homepage
          namespace: homepage
          port: 3000
